Online BookStore completed